--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Landing Page</title>
 </head>
 
@@ -12,7 +13,12 @@
     <div class="container">
         <nav class="hero-header">
             <div class="header-logo">
-                <img src="/images/logo.jpg" alt="logo">
+                <img class="logo" src="./images/logo.jpg" alt="logo">
+            </div>
+            <div class="header-links">  
+                <a href="#">About</a>
+                <a href="#">Contact</a>
+                <a href="#">FAQ</a>
             </div>
         </nav>
     </div>
