feat: Moving forward with styling main section.

--- a/index.html
+++ b/index.html
@@ -13,14 +13,26 @@
     <div class="container">
         <nav class="hero-header">
             <div class="header-logo">
-                <img class="logo" src="./images/logo.jpg" alt="logo">
+                <img src="./images/logo.jpg" alt="logo">
             </div>
-            <div class="header-links">  
+            <div class="header-links">
                 <a href="#">About</a>
                 <a href="#">Contact</a>
                 <a href="#">FAQ</a>
             </div>
         </nav>
+        <div class="hero-main">
+            <div class="hero-text">
+                <h1>The Awesome Roman Empire Website</h1>
+                <p>Once we were the rulers of the world. 2000 years after, here we are in a world with no order
+                    stablished, and everything is weird and confusing. But we are ready to resurge, and we need YOU for
+                    this task. Sign up and be part to our Legions!</p>
+                    <button type="button" class="signup">Sign Up!</button>
+            </div>
+            <div class="hero-img">
+                <img src="./images/colloseum2.avif" alt="colloseum">
+            </div>
+        </div>
     </div>
 </body>
 
