Project finished. Could be betterbut its something to start with.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;500&display=swap" rel="stylesheet">
     <title>Landing Page</title>
 </head>
 
@@ -27,14 +30,50 @@
                 <p>Once we were the rulers of the world. 2000 years after, here we are in a world with no order
                     stablished, and everything is weird and confusing. But we are ready to resurge, and we need YOU for
                     this task. Sign up and be part to our Legions!</p>
-                    <button type="button" class="signup">Sign Up!</button>
+                <button type="button" class="signup">Sign Up!</button>
             </div>
             <div class="hero-img">
                 <img src="./images/colloseum2.avif" alt="colloseum">
             </div>
         </div>
-        
+        <div class="info-text">
+            <h2>Know some random facts about the greatest civilization</h2>
+        </div>
+        <div class="info">
+            <div>
+                <img src="./images/info1.jpg" alt="">
+                <p>Masters of the art in many ways.</p>
+            </div>
+            <div>
+                <img src="./images/info2.jpg" alt="">
+                <p>Strongest currency during our times.</p>
+            </div>
+            <div>
+                <img src="./images/info3.jpeg" alt="">
+                <p>Architecture and tecnology.</p>
+            </div>
+            <div>
+                <img src="./images/info3.png" alt="">
+                <p>Forgot how big we were?</p>
+            </div>
+        </div>
+        <div class="quote-section">
+            <p class="quote">“While its true that someone can impede our actions, they cant impede our intentions and our attitudes,
+                which have the power of being conditional and adaptable. For the mind adapts and converts any obstacle
+                to its action into a means of achieving it. That which is an impediment to action is turned to advance
+                action. The obstacle on the path becomes the way.”</p>
+                <h3>-Marcus Aurelius</h3>
+        </div>
+        <div class="content">
+            <div class="calltoaction">
+                <h4>Call to action! It's time!</h4>
+                <p>Sign up here to join our powefull Legion!</p>
+                <button type="button" class="signup button2">Im in!</button>
+            </div>
+        </div>
     </div>
+    <footer>
+        <h5>Copyright © Pipiolus the roman </h5>
+    </footer>
 </body>
-
 </html>
